update client